--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -7,15 +7,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.0",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
-    "jquery": "^3.6.0",
+    "jquery": "^3.6.3",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
