--- a/src/CombatAnalysis.Core/CombatAnalysis.Core.csproj
+++ b/src/CombatAnalysis.Core/CombatAnalysis.Core.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\API\CombatAnalysis.CombatParserAPI\CombatAnalysis.CombatParserAPI.csproj" />
     <ProjectReference Include="..\CombatAnalysis.CombatParser\CombatAnalysis.CombatParser.csproj" />
   </ItemGroup>
 
