Add chat to Web Application

--- a/src/CombatAnalysis.WebApp/appsettings.json
+++ b/src/CombatAnalysis.WebApp/appsettings.json
@@ -21,5 +21,6 @@
     "Name": "JWTKey"
   },
   "CombatParserApiPort": "https://localhost:5001/",
-  "UserApiPort": "https://localhost:5003/"
+  "UserApiPort": "https://localhost:5003/",
+  "ChatApiPort": "https://localhost:5007/"
 }
