Update communication options
Add a new options:
 - feed
Remove options:
 - invites to chat

--- a/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
+++ b/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
@@ -30,6 +30,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\components\communication\feed\" />
+    <Folder Include="ClientApp\src\components\communication\events\" />
     <Folder Include="ClientApp\src\components\general\" />
   </ItemGroup>
 
