--- a/src/API/CombatAnalysis.UserApi/CombatAnalysis.UserApi.csproj
+++ b/src/API/CombatAnalysis.UserApi/CombatAnalysis.UserApi.csproj
@@ -12,11 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\CombatAnalysis.BL\CombatAnalysis.BL.csproj" />
+    <ProjectReference Include="..\..\CombatAnalysis.CutomerBL\CombatAnalysis.CustomerBL.csproj" />
     <ProjectReference Include="..\..\CombatAnalysis.Identity\CombatAnalysis.Identity.csproj" />
   </ItemGroup>
 
