--- a/src/CombatAnalysis.WebApp/appsettings.json
+++ b/src/CombatAnalysis.WebApp/appsettings.json
@@ -1,10 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Combat_Analysis;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Database": {
-    "Name": "MSSQL",
-    "DataProcessingType": "StoredProcedure"
+    "DefaultConnection": "Server=127.0.0.1;User Id=sqlserver;Password=test123;Database=Combat_Analysis;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "TestConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Combat_Analysis_Tests;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Firebase": "https://detailsanalysisgamecombatlogs-default-rtdb.firebaseio.com/"
   },
   "Logging": {
     "LogLevel": {
@@ -20,7 +18,7 @@
     "AuthScheme": "CustomBearer ",
     "Name": "JWTKey"
   },
-  "CombatParserApiPort": "https://localhost:5001/",
-  "UserApiPort": "https://localhost:5003/",
-  "ChatApiPort": "https://localhost:5007/"
+  "CombatParserApiPort": "http://34.30.199.104/",
+  "UserApiPort": "http://34.122.136.208/",
+  "ChatApiPort": "http://34.30.8.164/"
 }
