--- a/src/API/CombatAnalysis.ChatApi/appsettings.json
+++ b/src/API/CombatAnalysis.ChatApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Combat_Analysis;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=127.0.0.1;User Id=sqlserver;Password=test123;Database=Combat_Analysis;TrustServerCertificate=True;MultipleActiveResultSets=true",
     "TestConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Combat_Analysis_Tests;Trusted_Connection=True;MultipleActiveResultSets=true",
     "Firebase": "https://detailsanalysisgamecombatlogs-default-rtdb.firebaseio.com/"
   },
