--- a/Deploy/GoogleCloud/UserApi/UserApiChart/templates/deployment.yaml
+++ b/Deploy/GoogleCloud/UserApi/UserApiChart/templates/deployment.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: chat-api
+  name: {{ .Release.Name }}
   labels:
-    app: chat-api
+    app: {{ .Release.Name }}
 spec:
   selector:
     matchLabels:
-      app: chat-api
+      app: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: chat-api
+        app: {{ .Release.Name }}
     spec:
-      serviceAccountName: combat-analysis-account
+      serviceAccountName: {{ .Values.servieAccountName }}
       containers:
-        - name: chat-api
-          image: solinx/combat-analysis-chat-api:latest
+        - name: {{ .Release.Name }}
+          image: {{ .Values.container.image }}
           ports:
-          - containerPort: 80
+          - containerPort: {{ .Values.container.port }}
           env:
           - name: PORT
             value: "80"
@@ -47,7 +47,7 @@ spec:
             # tcp should be set to the port the proxy should listen on
             # and should match the DB_PORT value set above.
             # Defaults: MySQL: 3306, Postgres: 5432, SQLServer: 1433
-            - "-instances=lucid-diode-391208:us-central1:combat-analysis=tcp:1433"
+            - "-instances={{ .Values.connnectionName }}=tcp:1433"
           securityContext:
             # The default Cloud SQL proxy image runs as the
             # "nonroot" user and group (uid: 65532) by default.
