--- a/src/API/CombatAnalysis.UserApi/CombatAnalysis.UserApi.csproj
+++ b/src/API/CombatAnalysis.UserApi/CombatAnalysis.UserApi.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>520ea3da-dd1e-42f1-bee4-31b104d87e0f</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
