--- a/src/CombatAnalysis.WebApp/appsettings.Production.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Production.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1;User Id=sqlserver;Password=test123;Database=Combat_Analysis;TrustServerCertificate=True;MultipleActiveResultSets=true",
-    "TestConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Combat_Analysis_Tests;Trusted_Connection=True;MultipleActiveResultSets=true",
     "Firebase": "https://detailsanalysisgamecombatlogs-default-rtdb.firebaseio.com/"
   },
   "TokenSettings": {
@@ -10,7 +9,7 @@
     "AuthScheme": "CustomBearer ",
     "Name": "JWTKey"
   },
-  "CombatParserApiPort": "http://localhost:5000/",
-  "UserApiPort": "http://localhost:5002/",
-  "ChatApiPort": "http://localhost:5006/"
+  "CombatParserApiPort": "http://34.30.199.104/",
+  "UserApiPort": "http://34.122.136.208/",
+  "ChatApiPort": "http://34.30.8.164/"
 }
