--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.0",
     "bootstrap": "^5.2.3",
