--- a/src/API/CombatAnalysis.ChatApi/CombatAnalysis.ChatApi.csproj
+++ b/src/API/CombatAnalysis.ChatApi/CombatAnalysis.ChatApi.csproj
@@ -16,11 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\..\CombatAnalysis.BL\CombatAnalysis.BL.csproj" />
+    <ProjectReference Include="..\..\CombatAnalysis.CutomerBL\CombatAnalysis.CustomerBL.csproj" />
   </ItemGroup>
 
 </Project>
