Update Combat analysis components

--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "CombatParserApiPort": "http://localhost:5000/",
+  "CombatParserApiPort": "https://localhost:5001/",
   "UserApiPort": "http://localhost:5002/",
   "ChatApiPort": "http://localhost:5006/"
 }
