Remove extra services from web app

--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "CombatParserApiPort": "https://localhost:5001/",
-  "UserApiPort": "http://localhost:5002/",
-  "ChatApiPort": "http://localhost:5006/"
+  "UserApiPort": "https://localhost:5003/",
+  "ChatApiPort": "https://localhost:5007/"
 }
