--- a/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
+++ b/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
@@ -29,6 +29,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\public\locales\en\communication\chats\" />
+    <Folder Include="ClientApp\public\locales\ru\communication\chats\" />
     <Folder Include="ClientApp\src\components\communication\events\" />
     <Folder Include="ClientApp\src\store\slicers\" />
   </ItemGroup>
