--- a/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
+++ b/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
@@ -30,6 +30,8 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\public\locales\en\communication\chats\" />
+    <Folder Include="ClientApp\public\locales\en\communication\myEnvironment\" />
+    <Folder Include="ClientApp\public\locales\ru\communication\myEnvironment\" />
     <Folder Include="ClientApp\src\components\communication\events\" />
     <Folder Include="ClientApp\src\store\slicers\" />
   </ItemGroup>
