Develop Auth middleware for API

--- a/src/API/CombatAnalysis.ChatApi/CombatAnalysis.ChatApi.csproj
+++ b/src/API/CombatAnalysis.ChatApi/CombatAnalysis.ChatApi.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\CombatAnalysis.BL\CombatAnalysis.BL.csproj" />
     <ProjectReference Include="..\..\CombatAnalysis.CutomerBL\CombatAnalysis.CustomerBL.csproj" />
+    <ProjectReference Include="..\..\CombatAnalysis.Identity\CombatAnalysis.Identity.csproj" />
   </ItemGroup>
 
 </Project>
