--- a/src/API/CombatAnalysis.ChatApi/appsettings.Development.json
+++ b/src/API/CombatAnalysis.ChatApi/appsettings.Development.json
@@ -7,5 +7,11 @@
   "Database": {
     "Name": "MSSQL",
     "DataProcessingType": "StoredProcedure"
+  },
+  "TokenSettings": {
+    "Issuer": "MySecretIssuer",
+    "Audience": "MySecretAudience",
+    "AuthScheme": "CustomBearer ",
+    "Name": "JWTKey"
   }
 }
