--- a/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
+++ b/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
@@ -32,6 +32,7 @@
     <Folder Include="ClientApp\public\locales\en\communication\myEnvironment\" />
     <Folder Include="ClientApp\public\locales\ru\communication\myEnvironment\" />
     <Folder Include="ClientApp\src\components\communication\events\" />
+    <Folder Include="ClientApp\src\middleware\" />
     <Folder Include="ClientApp\src\store\slicers\" />
   </ItemGroup>
 
