--- a/src/API/CombatAnalysis.CombatParserAPI/appsettings.Production.json
+++ b/src/API/CombatAnalysis.CombatParserAPI/appsettings.Production.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;User Id=sqlserver;Password=test123;Database=Combat_Analysis;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Data Source=SOLINX\\SQLEXPRESS01;Database=Combat_Analysis;User Id=sa;Password=123;Integrated Security=False;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "TestConnection": "Data Source=SOLINX\\SQLEXPRESS01;Database=Combat_Analysis_Tests;User Id=sa;Password=123;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
     "Firebase": "https://detailsanalysisgamecombatlogs-default-rtdb.firebaseio.com/"
   },
   "Database": {
