--- a/src/API/CombatAnalysis.UserApi/appsettings.Development.json
+++ b/src/API/CombatAnalysis.UserApi/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Combat_Analysis;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "TestConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Combat_Analysis_Tests;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Data Source=SOLINX\\SQLEXPRESS01;Database=Combat_Analysis;User Id=sa;Password=123;Integrated Security=False;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "TestConnection": "Data Source=SOLINX\\SQLEXPRESS01;Database=Combat_Analysis_Tests;User Id=sa;Password=123;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
     "Firebase": "https://detailsanalysisgamecombatlogs-default-rtdb.firebaseio.com/"
   },
   "Database": {
