--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -10,6 +10,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
+    "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -31,6 +32,9 @@
     "recharts": "^2.1.16",
     "rimraf": "^3.0.2",
     "sass": "^1.56.1",
+    "simple-peer": "^9.11.1",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
@@ -55,6 +59,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "nan": "^2.16.0",
+    "nodemon": "^3.0.3",
     "typescript": "^4.7.4"
   },
   "overrides": {
