--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react": "^7.30.1",
     "nan": "^2.16.0",
     "nodemon": "^3.0.3",
+    "readable-stream": "^4.5.2",
     "typescript": "^4.7.4"
   },
   "overrides": {
