Add voice chat context
Add context for voice chat. Context will store information about current call (peers, status of microphone/camera and etc.) and allow users continue call and work with application in any side (community, another chats, combat logs and etc.)

--- a/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
+++ b/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
@@ -32,7 +32,9 @@
     <Folder Include="ClientApp\public\locales\en\communication\myEnvironment\" />
     <Folder Include="ClientApp\public\locales\ru\communication\myEnvironment\" />
     <Folder Include="ClientApp\src\components\communication\events\" />
+    <Folder Include="ClientApp\src\hocHelpers\" />
     <Folder Include="ClientApp\src\middleware\" />
+    <Folder Include="ClientApp\src\context\" />
     <Folder Include="ClientApp\src\store\slicers\" />
   </ItemGroup>
 
