--- a/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
+++ b/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
@@ -36,6 +36,7 @@
     <Folder Include="ClientApp\src\middleware\" />
     <Folder Include="ClientApp\src\context\" />
     <Folder Include="ClientApp\src\store\slicers\" />
+    <Folder Include="Patterns\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
