Create Customer DAL
Create Customer Data Access Layer library (move from general DAL library)

--- a/src/CombatAnalysis.Identity/CombatAnalysis.Identity.csproj
+++ b/src/CombatAnalysis.Identity/CombatAnalysis.Identity.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CombatAnalysis.DAL\CombatAnalysis.DAL.csproj" />
+    <ProjectReference Include="..\CombatAnalysis.CustomerDAL\CombatAnalysis.CustomerDAL.csproj" />
   </ItemGroup>
 
 </Project>
