Add save spec id and class id
Save combat log data with spec id and class id information

--- a/src/CombatAnalysis.App/App.config
+++ b/src/CombatAnalysis.App/App.config
@@ -24,17 +24,18 @@
         <add key="5" value="Божественная буря" />
         <add key="6" value="Молот праведника" />
         <add key="7" value="Выстрел химеры" />
-        <add key="8" value="Расправа" />
-        <add key="9" value="Быстрина" />
+        <add key="8" value="Разрывной выстрел" />
+        <add key="9" value="Расправа" />
+        <add key="10" value="Быстрина" />
       </specs>
       <classes>
         <add key="0" value="0,1"/>
         <add key="1" value="2,3"/>
         <add key="2" value="4"/>
         <add key="3" value="5,6"/>
-        <add key="4" value="7" />
-        <add key="5" value="8" />
-        <add key="6" value="9" />
+        <add key="4" value="7,8" />
+        <add key="5" value="9" />
+        <add key="6" value="10" />
       </classes>
     </players>
 </configuration>
