Add Combat player parser info
Add additional information about Combat Player for parsing and compare results with another players

--- a/src/API/CombatAnalysis.CombatParserAPI/appsettings.Development.json
+++ b/src/API/CombatAnalysis.CombatParserAPI/appsettings.Development.json
@@ -7,5 +7,44 @@
   "Database": {
     "Name": "MSSQL",
     "DataProcessingType": "StoredProcedure"
+  },
+  "Players": {
+    "Specs": {
+      "0": "Удар Плети",
+      "1": "Воющий ветер",
+      "2": "Полоснуть",
+      "3": "Омоложение",
+      "4": "Огненная глыба",
+      "5": "Божественная буря",
+      "6": "Молот праведника",
+      "7": "Выстрел химеры",
+      "8": "Разрывной выстрел",
+      "9": "Расправа",
+      "10": "Быстрина"
+    },
+    "Classes": {
+      "0": "0,1",
+      "1": "2,3",
+      "2": "4",
+      "3": "5,6",
+      "4": "7,8",
+      "5": "9",
+      "6": "10"
+    },
+    "Bosses": {
+      "0": "Халион",
+      "1": "Лорд Ребрад",
+      "2": "Леди Смертный Шепот",
+      "3": "Битва на кораблях в Ледяной Короне",
+      "4": "Саурфанг",
+      "5": "Тухлопуз",
+      "6": "Гниломорд",
+      "7": "Профессор",
+      "8": "Кровавый Совет",
+      "9": "Королева Лана'тель",
+      "10": "Валитрия Сноходица",
+      "11": "Синдрагоса",
+      "12": "Король-лич"
+    }
   }
 }
