Fix Combat parser algorithm
Fix Combat parser algorithm. Added all zones, where can be combat (not only where combat started/finished)

--- a/src/API/CombatAnalysis.CombatParserAPI/appsettings.Development.json
+++ b/src/API/CombatAnalysis.CombatParserAPI/appsettings.Development.json
@@ -20,16 +20,29 @@
       "7": "Выстрел химеры",
       "8": "Разрывной выстрел",
       "9": "Расправа",
-      "10": "Быстрина"
+      "10": "Быстрина",
+      "11": "Удар героя",
+      "12": "Звездный огонь",
+      "13": "Атака языка пламени",
+      "14": "Нестабильное колдовство",
+      "15": "Ожог души",
+      "16": "Слово силы: Щит",
+      "17": "Пытка разума",
+      "18": "Частица Света",
+      "19": "Выброс лавы",
+      "20": "Воля мертвых"
     },
     "Classes": {
-      "0": "0,1",
-      "1": "2,3",
+      "0": "0,1,20",
+      "1": "2,3,12",
       "2": "4",
-      "3": "5,6",
+      "3": "5,6,18",
       "4": "7,8",
       "5": "9",
-      "6": "10"
+      "6": "10,13,19",
+      "7": "11",
+      "8": "14,15",
+      "9": "16,17"
     },
     "Bosses": {
       "0": "Халион",
