Fix Uploading data algorithm
Fix Uploading DB Combat Log data algorithm

--- a/src/API/CombatAnalysis.CombatParserAPI/appsettings.Production.json
+++ b/src/API/CombatAnalysis.CombatParserAPI/appsettings.Production.json
@@ -1,11 +1,63 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SOLINX;Database=Combat_Analysis;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    "TestConnection": "Data Source=SOLINX;Database=Combat_Analysis_Tests;User Id=sa;Password=Oleg123;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "DefaultConnection": "Data Source=SOLINX;Database=Combat_Analysis.Combat_Logs;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "TestConnection": "Data Source=SOLINX;Database=Combat_Analysis_Tests.Combat_Logs.Test;User Id=sa;Password=Oleg123;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
     "Firebase": "https://detailsanalysisgamecombatlogs-default-rtdb.firebaseio.com/"
   },
   "Database": {
     "Name": "MSSQL",
     "DataProcessingType": "StoredProcedure"
+  },
+  "Players": {
+    "Specs": {
+      "0": "Удар Плети",
+      "1": "Воющий ветер",
+      "2": "Полоснуть",
+      "3": "Омоложение",
+      "4": "Огненная глыба",
+      "5": "Божественная буря",
+      "6": "Молот праведника",
+      "7": "Выстрел химеры",
+      "8": "Разрывной выстрел",
+      "9": "Расправа",
+      "10": "Быстрина",
+      "11": "Удар героя",
+      "12": "Звездный огонь",
+      "13": "Атака языка пламени",
+      "14": "Нестабильное колдовство",
+      "15": "Ожог души",
+      "16": "Слово силы: Щит",
+      "17": "Пытка разума",
+      "18": "Частица Света",
+      "19": "Выброс лавы",
+      "20": "Воля мертвых"
+    },
+    "Classes": {
+      "0": "0,1,20",
+      "1": "2,3,12",
+      "2": "4",
+      "3": "5,6,18",
+      "4": "7,8",
+      "5": "9",
+      "6": "10,13,19",
+      "7": "11",
+      "8": "14,15",
+      "9": "16,17"
+    },
+    "Bosses": {
+      "0": "Халион",
+      "1": "Лорд Ребрад",
+      "2": "Леди Смертный Шепот",
+      "3": "Битва на кораблях в Ледяной Короне",
+      "4": "Саурфанг",
+      "5": "Тухлопуз",
+      "6": "Гниломорд",
+      "7": "Профессор",
+      "8": "Кровавый Совет",
+      "9": "Королева Лана'тель",
+      "10": "Валитрия Сноходица",
+      "11": "Синдрагоса",
+      "12": "Король-лич"
+    }
   }
 }
