--- a/src/CombatAnalysis.App/App.config
+++ b/src/CombatAnalysis.App/App.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="combatParserApiPort" value="https://localhost:5001/"/>
-		<add key="userApiPort" value="https://localhost:5003/"/>
-		<add key="chatApiPort" value="https://localhost:5007/"/>
-		<add key="communicationApiPort" value="https://localhost:5009/"/>
+		<add key="combatParserApiPort" value="http://192.168.0.161:5431/"/>
+		<add key="userApiPort" value="http://192.168.0.161:5432/"/>
+		<add key="communicationApiPort" value="http://192.168.0.161:5433/"/>
+		<add key="chatApiPort" value="http://192.168.0.161:5434/"/>
 		<add key="maxDegreeOfParallelism" value="3"/>
 		<add key="appVersionType" value="Beta"/>
 		<add key="appVersion" value="1.7.0"/>
