--- a/src/API/CombatAnalysis.CombatParserAPI/appsettings.Development.json
+++ b/src/API/CombatAnalysis.CombatParserAPI/appsettings.Development.json
@@ -1,12 +1,15 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SOLINX;Database=Combat_Analysis.Combat_Logs;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    "TestConnection": "Data Source=SOLINX;Database=Combat_Analysis_Tests.Combat_Logs.Test;User Id=sa;Password=Oleg123;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "DefaultConnection": "Data Source=SOLINX;Database=Combat_Analysis.Combat_Logs;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=120;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "TestConnection": "Data Source=SOLINX;Database=Combat_Analysis_Tests.Combat_Logs.Test;User Id=sa;Password=Oleg123;Integrated Security=True;Connect Timeout=60;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
     "Firebase": "https://detailsanalysisgamecombatlogs-default-rtdb.firebaseio.com/"
   },
   "Database": {
     "Name": "MSSQL",
     "DataProcessingType": "StoredProcedure"
+  },
+  "Configuration": {
+    "CommandTimeout": 120
   },
   "Players": {
     "Specs": {
