Fix 413 status code
Fix 413 status code

--- a/src/API/CombatAnalysis.CombatParserAPI/appsettings.Development.json
+++ b/src/API/CombatAnalysis.CombatParserAPI/appsettings.Development.json
@@ -8,8 +8,9 @@
     "Name": "MSSQL",
     "DataProcessingType": "StoredProcedure"
   },
-  "Configuration": {
-    "CommandTimeout": 120
+  "DBConfiguration": {
+    "CommandTimeout": 120,
+    "MaxRequestBodySize": 150000000
   },
   "Players": {
     "Specs": {
