Update Production configs
Update Combat parser API Production configs

--- a/src/API/CombatAnalysis.CombatParserAPI/appsettings.Production.json
+++ b/src/API/CombatAnalysis.CombatParserAPI/appsettings.Production.json
@@ -7,6 +7,10 @@
     "Name": "MSSQL",
     "DataProcessingType": "StoredProcedure"
   },
+  "DBConfiguration": {
+    "CommandTimeout": 120,
+    "MaxRequestBodySize": 150000000
+  },
   "Players": {
     "Specs": {
       "0": "Удар Плети",
