--- a/src/API/CombatAnalysis.CombatParserAPI/appsettings.Development.json
+++ b/src/API/CombatAnalysis.CombatParserAPI/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SOLINX;Database=Combat_Analysis.Combat_Logs;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=120;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "DefaultConnection": "Data Source=SOLINX;Database=Combat_Analysis.Combat_Logs;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=180;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
     "TestConnection": "Data Source=SOLINX;Database=Combat_Analysis_Tests.Combat_Logs.Test;User Id=sa;Password=Oleg123;Integrated Security=True;Connect Timeout=60;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
     "Firebase": "https://detailsanalysisgamecombatlogs-default-rtdb.firebaseio.com/"
   },
@@ -9,7 +9,7 @@
     "DataProcessingType": "StoredProcedure"
   },
   "DBConfiguration": {
-    "CommandTimeout": 120,
+    "CommandTimeout": 180,
     "MaxRequestBodySize": 150000000
   },
   "Players": {
@@ -31,22 +31,25 @@
       "14": "Нестабильное колдовство",
       "15": "Ожог души",
       "16": "Слово силы: Щит",
-      "17": "Пытка разума",
-      "18": "Частица Света",
-      "19": "Выброс лавы",
-      "20": "Воля мертвых"
+      "17": "Исповедь",
+      "18": "Пытка разума",
+      "19": "Частица Света",
+      "20": "Выброс лавы",
+      "21": "Воля мертвых",
+      "22": "Череда убийств",
+      "23": "Захват рун"
     },
     "Classes": {
-      "0": "0,1,20",
+      "0": "0,1,21,23",
       "1": "2,3,12",
       "2": "4",
-      "3": "5,6,18",
+      "3": "5,6,19",
       "4": "7,8",
-      "5": "9",
-      "6": "10,13,19",
+      "5": "9,22",
+      "6": "10,13,20",
       "7": "11",
       "8": "14,15",
-      "9": "16,17"
+      "9": "16,17,18"
     },
     "Bosses": {
       "0": "Халион",
