--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
-  "CombatParserApiPort": "https://localhost:5001/",
-  "UserApiPort": "https://localhost:5003/",
-  "ChatApiPort": "https://localhost:5007/",
-  "CommunicationApiPort": "https://localhost:5009/"
+  "CombatParserApiPort": "http://192.168.0.161:5431/",
+  "UserApiPort": "http://192.168.0.161:5432/",
+  "ChatApiPort": "http://192.168.0.161:5434/",
+  "CommunicationApiPort": "http://192.168.0.161:5433/"
 }
