Add Player Death information
Add Player Death information: from logs will be get information about players death during combat

--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "CombatParserApiPort": "http://192.168.0.161:5431/",
+  "CombatParserApiPort": "https://localhost:5001/",
   "UserApiPort": "http://192.168.0.161:5432/",
   "ChatApiPort": "http://192.168.0.161:5434/",
   "CommunicationApiPort": "http://192.168.0.161:5433/"
