--- a/src/CombatAnalysis.App/App.config
+++ b/src/CombatAnalysis.App/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="combatParserApiPort" value="https://localhost:5001/"/>
+		<add key="combatParserApiPort" value="http://192.168.0.161:5431/"/>
 		<add key="userApiPort" value="http://192.168.0.161:5432/"/>
 		<add key="communicationApiPort" value="http://192.168.0.161:5433/"/>
 		<add key="chatApiPort" value="http://192.168.0.161:5434/"/>
