--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "CombatParserApiPort": "https://localhost:5001/",
+  "CombatParserApiPort": "http://192.168.0.161:5431/",
   "UserApiPort": "http://192.168.0.161:5432/",
   "ChatApiPort": "http://192.168.0.161:5434/",
   "CommunicationApiPort": "http://192.168.0.161:5433/"
