--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -28,6 +28,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "reactstrap": "^9.1.3",
     "recharts": "^2.1.16",
     "rimraf": "^3.0.2",
