Add New posts notifications
Add New posts notifications: now users will see informations, that they have new posts (your, friends or from your communities)

--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -2,5 +2,5 @@
   "CombatParserApiPort": "http://192.168.0.161:5431/",
   "UserApiPort": "http://192.168.0.161:5432/",
   "ChatApiPort": "http://192.168.0.161:5434/",
-  "CommunicationApiPort": "https://localhost:5009/"
+  "CommunicationApiPort": "http://192.168.0.161:5433/"
 }
