--- a/src/CombatAnalysis.WebApp/appsettings.Production.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Production.json
@@ -2,5 +2,6 @@
   "CombatParserApiPort": "http://192.168.0.161:5431/",
   "UserApiPort": "http://192.168.0.161:5432/",
   "ChatApiPort": "http://192.168.0.161:5434/",
-  "CommunicationApiPort": "http://192.168.0.161:5433/"
+  "CommunicationApiPort": "http://192.168.0.161:5433/",
+  "Identity": "https://localhost:7064"
 }
