--- a/src/API/CombatAnalysis.CommunicationAPI/appsettings.Development.json
+++ b/src/API/CombatAnalysis.CommunicationAPI/appsettings.Development.json
@@ -14,5 +14,8 @@
     "Audience": "MySecretAudience",
     "AuthScheme": "CustomBearer ",
     "Name": "JWTKey"
+  },
+  "Authentication": {
+    "identityServer": "https://localhost:7064"
   }
 }
