--- a/src/API/CombatAnalysis.UserApi/appsettings.Production.json
+++ b/src/API/CombatAnalysis.UserApi/appsettings.Production.json
@@ -12,5 +12,8 @@
     "Audience": "MySecretAudience",
     "AuthScheme": "CustomBearer ",
     "Name": "JWTKey"
+  },
+  "Authentication": {
+    "identityServer": "https://localhost:7064"
   }
 }
