--- a/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
+++ b/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
@@ -1,6 +1,15 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SOLINX;Database=Combat_Analysis.User;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=120;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "DefaultConnection": "Data Source=SOLINX;Database=Combat_Analysis.User;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=120;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "TokenSettings": {
+    "Issuer": "https://localhost:7064",
+    "Audience": "https://localhost:5003"
+  },
+  "Client": {
+    "ClientId": "client1",
+    "ClientSecret": "secret1",
+    "Scope": "api1"
   },
   "DetailedErrors": true,
   "Logging": {
