Add Code challenge store in DB
Add Code challenge store in DB

--- a/src/CombatAnalysis.WebApp/ClientApp/.env.development
+++ b/src/CombatAnalysis.WebApp/ClientApp/.env.development
@@ -1,3 +1,8 @@
 PORT=44479
 HTTPS=true
-
+REACT_APP_CODE_CHALLENGE_METHOD=SHA-256
+REACT_APP_CLIENT_ID=client1
+REACT_APP_CLIENT_SCOPE=api1
+REACT_APP_IDENTITY_SERVER=https://localhost:7064
+REACT_APP_IDENTITY_SERVER_AUTH_PATH=authorization
+REACT_APP_REDIRECT_URI=https://localhost:44479/callback
