--- a/src/CombatAnalysis.Identity/CombatAnalysis.Identity.csproj
+++ b/src/CombatAnalysis.Identity/CombatAnalysis.Identity.csproj
@@ -10,11 +10,11 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.25.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CombatAnalysis.CustomerDAL\CombatAnalysis.CustomerDAL.csproj" />
+    <ProjectReference Include="..\CombatAnalysis.IdentityDAL\CombatAnalysis.IdentityDAL.csproj" />
   </ItemGroup>
 
 </Project>
