Add access token and token validation
Add access token and token validation

--- a/src/API/CombatAnalysis.UserApi/appsettings.Development.json
+++ b/src/API/CombatAnalysis.UserApi/appsettings.Development.json
@@ -9,6 +9,12 @@
     "DataProcessingType": "StoredProcedure"
   },
   "Authentication": {
-    "identityServer": "https://localhost:7064"
+    "IdentityServer": "https://localhost:7064",
+    "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ="
+  },
+  "Client": {
+    "ClientId": "client1",
+    "ClientSecret": "secret1",
+    "Scope": "api1"
   }
 }
