--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -3,5 +3,9 @@
   "UserApiPort": "https://localhost:5003/",
   "ChatApiPort": "http://192.168.0.161:5434/",
   "CommunicationApiPort": "http://192.168.0.161:5433/",
-  "Identity": "https://localhost:7064/"
+  "Identity": "https://localhost:7064/",
+  "Authorization": {
+    "ClientId": "client1",
+    "RedirectUri": "https://localhost:44479/callback"
+  }
 }
