Fix problem with authorization
Fix problem with authorization

--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -2,9 +2,9 @@
   "CombatParserApiPort": "http://192.168.0.161:5431/",
   "UserApiPort": "https://localhost:5003/",
   "ChatApiPort": "http://192.168.0.161:5434/",
-  "CommunicationApiPort": "http://192.168.0.161:5433/",
+  "CommunicationApiPort": "https://localhost:5009/",
   "Identity": "https://localhost:7064/",
-  "Authorization": {
+  "Authentication": {
     "ClientId": "client1",
     "RedirectUri": "https://localhost:44479/callback"
   }
