Add check Access token to Controllers
Add check Access token to Controllers

--- a/src/API/CombatAnalysis.ChatApi/appsettings.Development.json
+++ b/src/API/CombatAnalysis.ChatApi/appsettings.Development.json
@@ -9,13 +9,8 @@
     "Name": "MSSQL",
     "DataProcessingType": "StoredProcedure"
   },
-  "TokenSettings": {
-    "Issuer": "MySecretIssuer",
-    "Audience": "MySecretAudience",
-    "AuthScheme": "CustomBearer ",
-    "Name": "JWTKey"
-  },
   "Authentication": {
-    "identityServer": "https://localhost:7064"
+    "IdentityServer": "https://localhost:7064",
+    "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ="
   }
 }
