--- a/src/API/CombatAnalysis.CommunicationAPI/appsettings.Development.json
+++ b/src/API/CombatAnalysis.CommunicationAPI/appsettings.Development.json
@@ -10,7 +10,7 @@
     "DataProcessingType": "StoredProcedure"
   },
   "Authentication": {
-    "identityServer": "https://localhost:7064",
+    "IdentityServer": "https://localhost:7064",
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ="
   }
 }
