--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "CombatParserApiPort": "http://192.168.0.161:5431/",
   "UserApiPort": "https://localhost:5003/",
-  "ChatApiPort": "http://192.168.0.161:5434/",
+  "ChatApiPort": "https://localhost:5007/",
   "CommunicationApiPort": "https://localhost:5009/",
   "Identity": "https://localhost:7064/",
   "Authentication": {
