--- a/src/CombatAnalysis.WebApp/ClientApp/.env.development
+++ b/src/CombatAnalysis.WebApp/ClientApp/.env.development
@@ -5,4 +5,5 @@ REACT_APP_CLIENT_ID=client1
 REACT_APP_CLIENT_SCOPE=client1scope
 REACT_APP_IDENTITY_SERVER=https://localhost:7064
 REACT_APP_IDENTITY_SERVER_AUTH_PATH=authorization
+REACT_APP_IDENTITY_SERVER_REGISTRY_PATH=registration
 REACT_APP_REDIRECT_URI=https://localhost:44479/callback
