--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -3,7 +3,7 @@
   "UserApiPort": "https://localhost:5003/",
   "ChatApiPort": "https://localhost:5007/",
   "CommunicationApiPort": "https://localhost:5009/",
-  "Identity": "https://localhost:7064/",
+  "IdentityPort": "https://localhost:7064/",
   "Authentication": {
     "ClientId": "client1",
     "RedirectUri": "https://localhost:44479/callback"
