--- a/src/CombatAnalysis.WebApp/appsettings.Production.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Production.json
@@ -1,7 +1,11 @@
 {
-  "CombatParserApiPort": "http://192.168.0.161:5431/",
-  "UserApiPort": "http://192.168.0.161:5432/",
-  "ChatApiPort": "http://192.168.0.161:5434/",
-  "CommunicationApiPort": "http://192.168.0.161:5433/",
-  "Identity": "https://localhost:7064"
+  "CombatParserApiPort": "https://192.168.0.161:6431/",
+  "UserApiPort": "https://192.168.0.161:6432/",
+  "ChatApiPort": "https://192.168.0.161:6434/",
+  "CommunicationApiPort": "https://192.168.0.161:6433/",
+  "IdentityPort": "https://solinx.identity:6436/",
+  "Authentication": {
+    "ClientId": "client1",
+    "RedirectUri": "https://solinx.analysis.community/callback"
+  }
 }
