--- a/src/Identity/CombatAnalysisIdentity/appsettings.Production.json
+++ b/src/Identity/CombatAnalysisIdentity/appsettings.Production.json
@@ -4,7 +4,7 @@
   },
   "Authentication": {
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
-    "Issuer": "https://localhost:7064",
+    "Issuer": "https://solinx.identity:6436/",
     "TokenExpiresInMinutes": 60
   },
   "Client": {
