--- a/src/API/CombatAnalysis.ChatApi/appsettings.Development.json
+++ b/src/API/CombatAnalysis.ChatApi/appsettings.Development.json
@@ -11,6 +11,15 @@
   },
   "Authentication": {
     "IdentityServer": "https://localhost:7064",
-    "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ="
+    "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
+    "Audience": "client1"
+  },
+  "Identity": {
+    "Server": "https://localhost:7064"
+  },
+  "Client": {
+    "ClientId": "client1",
+    "ClientSecret": "secret1",
+    "Scope": "api1"
   }
 }
