--- a/src/API/CombatAnalysis.CommunicationAPI/appsettings.Production.json
+++ b/src/API/CombatAnalysis.CommunicationAPI/appsettings.Production.json
@@ -9,7 +9,16 @@
     "DataProcessingType": "StoredProcedure"
   },
   "Authentication": {
-    "IdentityServer": "https://localhost:7064",
-    "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ="
+    "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
+    "Authority": "https://solinx.identity:6436/",
+    "Audience": "client1"
+  },
+  "Identity": {
+    "Server": "https://solinx.identity:6436/"
+  },
+  "Client": {
+    "ClientId": "client1",
+    "ClientSecret": "secret1",
+    "Scope": "api1"
   }
 }
