--- a/src/API/CombatAnalysis.UserApi/appsettings.Production.json
+++ b/src/API/CombatAnalysis.UserApi/appsettings.Production.json
@@ -8,8 +8,12 @@
     "DataProcessingType": "StoredProcedure"
   },
   "Authentication": {
-    "IdentityServer": "https://localhost:7064",
-    "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ="
+    "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
+    "Authority": "https://solinx.identity:6436/",
+    "Audience": "client1"
+  },
+  "Identity": {
+    "Server": "https://solinx.identity:6436/"
   },
   "Client": {
     "ClientId": "client1",
