Add applications into Kubernetes
Add applications into Kubernetes

--- a/src/API/CombatAnalysis.CombatParserAPI/CombatAnalysis.CombatParserAPI.csproj
+++ b/src/API/CombatAnalysis.CombatParserAPI/CombatAnalysis.CombatParserAPI.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\CombatAnalysis.BL\CombatAnalysis.BL.csproj" />
     <ProjectReference Include="..\..\CombatAnalysis.CombatParser\CombatAnalysis.CombatParser.csproj" />
+    <ProjectReference Include="..\CombatAnalysis.CommunicationAPI\CombatAnalysis.CommunicationAPI.csproj" />
   </ItemGroup>
 
 </Project>
