--- a/src/API/CombatAnalysis.CombatParserAPI/Dockerfile
+++ b/src/API/CombatAnalysis.CombatParserAPI/Dockerfile
@@ -6,18 +6,20 @@ EXPOSE 80
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["src/API/CombatAnalysis.CombatParserAPI/CombatAnalysis.CombatParserAPI.csproj", "src/API/CombatAnalysis.CombatParserAPI/"]
 COPY ["src/CombatAnalysis.BL/CombatAnalysis.BL.csproj", "src/CombatAnalysis.BL/"]
 COPY ["src/CombatAnalysis.DAL/CombatAnalysis.DAL.csproj", "src/CombatAnalysis.DAL/"]
 COPY ["src/CombatAnalysis.CombatParser/CombatAnalysis.CombatParser.csproj", "src/CombatAnalysis.CombatParser/"]
-RUN dotnet restore "src/API/CombatAnalysis.CombatParserAPI/CombatAnalysis.CombatParserAPI.csproj"
+RUN dotnet restore "./src/API/CombatAnalysis.CombatParserAPI/CombatAnalysis.CombatParserAPI.csproj"
 COPY . .
 WORKDIR "/src/src/API/CombatAnalysis.CombatParserAPI"
-RUN dotnet build "CombatAnalysis.CombatParserAPI.csproj" -c Release -o /app/build
+RUN dotnet build "./CombatAnalysis.CombatParserAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "CombatAnalysis.CombatParserAPI.csproj" -c Release -o /app/publish /p:UseAppHost=false
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./CombatAnalysis.CombatParserAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
