--- a/src/API/CombatAnalysis.UserApi/Dockerfile
+++ b/src/API/CombatAnalysis.UserApi/Dockerfile
@@ -6,18 +6,19 @@ EXPOSE 80
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["src/API/CombatAnalysis.UserApi/CombatAnalysis.UserApi.csproj", "src/API/CombatAnalysis.UserApi/"]
 COPY ["src/CombatAnalysis.CutomerBL/CombatAnalysis.CustomerBL.csproj", "src/CombatAnalysis.CutomerBL/"]
-COPY ["src/CombatAnalysis.DAL/CombatAnalysis.DAL.csproj", "src/CombatAnalysis.DAL/"]
-COPY ["src/CombatAnalysis.Identity/CombatAnalysis.Identity.csproj", "src/CombatAnalysis.Identity/"]
-RUN dotnet restore "src/API/CombatAnalysis.UserApi/CombatAnalysis.UserApi.csproj"
+COPY ["src/CombatAnalysis.CustomerDAL/CombatAnalysis.CustomerDAL.csproj", "src/CombatAnalysis.CustomerDAL/"]
+RUN dotnet restore "./src/API/CombatAnalysis.UserApi/CombatAnalysis.UserApi.csproj"
 COPY . .
 WORKDIR "/src/src/API/CombatAnalysis.UserApi"
-RUN dotnet build "CombatAnalysis.UserApi.csproj" -c Release -o /app/build
+RUN dotnet build "./CombatAnalysis.UserApi.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "CombatAnalysis.UserApi.csproj" -c Release -o /app/publish /p:UseAppHost=false
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./CombatAnalysis.UserApi.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
