--- a/src/CombatAnalysis.WebApp/appsettings.Production.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Production.json
@@ -1,8 +1,8 @@
 {
-  "CombatParserApiPort": "https://192.168.0.161:6431/",
-  "UserApiPort": "https://192.168.0.161:6432/",
-  "ChatApiPort": "https://192.168.0.161:6434/",
-  "CommunicationApiPort": "https://192.168.0.161:6433/",
+  "CombatParserApiPort": "https://solinx.analysis.web.api.parser:6431/",
+  "UserApiPort": "https://solinx.analysis.web.api.user:6432/",
+  "ChatApiPort": "https://solinx.analysis.web.api.chat:6434/",
+  "CommunicationApiPort": "https://solinx.analysis.web.api.communication:6433/",
   "IdentityPort": "https://solinx.identity:6436/",
   "Authentication": {
     "ClientId": "client1",
